Finished sidebar layout. Changing icons in html
Changing icons in HTML to inline svg to manipulate colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="entire-page">
         <div class="dashboard">
-            <div class="dashboard-title"><img src="./icons/dashboard.svg" alt="dashboard"> Dashboard</div>
+            <div class="dashboard-title"><img src="./icons/dashboard.svg" alt="dashboard">&nbsp;Dashboard</div>
             <br>
             <div class="dashboard-main">
                 <div><img src="./icons/home.svg" alt="home">&nbsp;&nbsp;&nbsp;Home</div>
