Fin trending / page. Need to fine tune the page.
The page layout is finished, details like sizing and overflow need to be
addressed.

--- a/index.html
+++ b/index.html
@@ -61,25 +61,29 @@
                         <div class="project-cards"><span></span><h4>Money Maker</h4><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat ab harum, iusto doloribus odio error aspernatur totam quas dignissimos vitae!</p><div class="project-cards-img"><img src="./icons/favorite.svg" alt="favorite"> <img src="./icons/eye-plus.svg" alt="eye-plus"> <img src="./icons/source-fork.svg" alt="source-fork"></div></div>
                     </div>
                 </div>
-                <div class="announcements">
-                    <h3>Announcements</h3>
-                    <div class="announcement-cards">
-                        <div>
-                            <div><h5>Site Maintenance</h5><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, natus?</p></div>
-                            <span id="grey"></span>
-                            <div><h5>Community Share Day</h5><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, labore.</p></div>
-                            <span></span>
-                            <div><h5>Updated Privacy Policy</h5><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt id est aspernatur quod autem facere!</p></div>
+                <section>
+                    <div class="announcements">
+                        <h3>Announcements</h3>
+                        <div class="announcement-cards">
+                            <div>
+                                <div><h5>Site Maintenance</h5><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, natus?</p></div>
+                                <span id="grey"></span>
+                                <div><h5>Community Share Day</h5><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, labore.</p></div>
+                                <span></span>
+                                <div><h5>Updated Privacy Policy</h5><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt id est aspernatur quod autem facere!</p></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="trending">
-                    <h3>Trending</h3>
-                    <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
-                    <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
-                    <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
-                    <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
-                </div>
+                    <div class="trending">
+                        <h3>Trending</h3>
+                        <div class="trending-profiles">
+                            <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
+                            <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
+                            <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
+                            <div><img src="./icons/profile-pic.png" alt="profile-pic"> <p>@warmsies</p><p>Warm Soul</p></div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
