--- a/index.html
+++ b/index.html
@@ -11,141 +11,143 @@
     <section class="side-bar">
         <h1><img src="./icons/dashboard.svg" alt="dashboard">Dashboard</h1>
         <div>
-            <ul class="tabs-1">
-                <li><img src="./icons/home.svg" alt="home">Home</li>
-                <li><img src="./icons/profile.svg" alt="profile">Profile</li>
-                <li><img src="./icons/message.svg" alt="message">Message</li>
-                <li><img src="./icons/history.svg" alt="history">History</li>
-                <li><img src="./icons/tasks.svg" alt="tasks">Tasks</li>
-                <li><img src="./icons/communities.svg" alt="communities">Communities</li>
-            </ul>
-            <ul class="tabs-2">
-                <li><img src="./icons/settings.svg" alt="settings">Settings</li>
-                <li><img src="./icons/support.svg" alt="support">Support</li>
-                <li><img src="./icons/privacy.svg" alt="privacy">Privacy</li>
-            </ul>
+            <div class="tabs-1">
+                <div><img src="./icons/home.svg" alt="home">Home</div>
+                <div><img src="./icons/profile.svg" alt="profile">Profile</div>
+                <div><img src="./icons/message.svg" alt="message">Message</div>
+                <div><img src="./icons/history.svg" alt="history">History</div>
+                <div><img src="./icons/tasks.svg" alt="tasks">Tasks</div>
+                <div><img src="./icons/communities.svg" alt="communities">Communities</div>
+            </div>
+            <div class="tabs-2">
+                <div><img src="./icons/settings.svg" alt="settings">Settings</div>
+                <div><img src="./icons/support.svg" alt="support">Support</div>
+                <div><img src="./icons/privacy.svg" alt="privacy">Privacy</div>
+            </div>
         </div>
     </section>
-    <section class="top-bar">
-        <form class="search" action="/search" method="get" class="search-bar">
-            <button><img src="./icons/search.svg" alt="search"></button>
-            <input type="text" name="search-box">
-        </form>
-        <div class="notification-area">
-            <button><img src="./icons/notifications.svg" alt="notifications"></button>
-            <button><img src="./icons/profile-pic.png" alt="profile-pic"></button>
-            <p>Morgan Oakley</p>
-        </div>
-        <div class="profile-intro">
-            <img src="./icons/profile-pic.png" alt="profile-pic">
-            <div class="username">
-                <p>Hi there,</p>
-                <p>Morgan Oakley (@morgan)</p>
+    <section>
+        <section class="top-bar">
+            <form class="search" action="/search" method="get" class="search-bar">
+                <button><img src="./icons/search.svg" alt="search"></button>
+                <input type="text" name="search-box">
+            </form>
+            <div class="notification-area">
+                <a><img src="./icons/notifications.svg" alt="notifications"></a>
+                <img src="./icons/profile-pic.png" alt="profile-pic">
+                <p>Morgan Oakley</p>
             </div>
-        </div>
-        <div class="social">
-            <button class="new">New</button>
-            <button class="upload">Upload</button>
-            <button class="share">Share</button>
-        </div>
-    </section>
-    <section class="main-body">
-        <div class="projects">
-            <h2 class="your-projects">Your Projects</h2>
-            <div class="cards">
-                <div>
-                    <div>
-                        <h3>Super Cool Project</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur dignissimos dolore quis enim ratione voluptatem.</p>
-                        <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Less Cool Project</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum obcaecati nemo sapiente blanditiis maxime et deleniti, libero cumque earum corporis explicabo. Asperiores enim minima obcaecati fugit!</p>
-                        <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Impossible App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero inventore doloremque ea expedita itaque!</p>
-                        <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Easy Peasy App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo non, debitis veniam dolorem eos dolore quibusdam excepturi eum in cumque molestias eius!</p>
-                        <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Ad Blocker</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis dignissimos iusto quod excepturi voluptate quas culpa aliquid.</p>
-                        <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Money Maker</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum qui consectetur, recusandae, dolorum neque atque nostrum facilis, veniam blanditiis maiores cupiditate perferendis.</p>
-                        <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
+            <div class="profile-intro">
+                <img src="./icons/profile-pic.png" alt="profile-pic">
+                <div class="username">
+                    <p>Hi there,</p>
+                    <p>Morgan Oakley (@morgan)</p>
                 </div>
             </div>
-        </div>
-        <div class="announcements">
-            <h2 class="announcements">Announcements</h2>
-            <div class="announcement-cards">
-                <div>
-                    <h4>Site Maintenance</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam itaque temporibus rem tempora molestias.</p>
-                </div>
-                <div>
-                    <h4>Community Share Day</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa explicabo cumque alias quisquam quod adipisci?</p>
-                </div>
-                <div>
-                    <h4>Updated Privacy Policy</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iure numquam enim hic sit. Voluptas, autem?</p>
-                </div>
+            <div class="social">
+                <button class="new">New</button>
+                <button class="upload">Upload</button>
+                <button class="share">Share</button>
             </div>
-        </div>
-        <div class="trending">
-            <h2 class="trending">Trending</h2>
-            <div>
-                <div>
-                    <img src="./icons/profile-pic.png" alt="profile-pic">
+        </section>
+        <section class="main-body">
+            <div class="projects">
+                <h2 class="your-projects">Your Projects</h2>
+                <div class="cards">
                     <div>
-                        <p>@morgan</p>
-                        <p>Super Cool Porject</p>
+                        <div>
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur dignissimos dolore quis enim ratione voluptatem.</p>
+                            <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img src="./icons/profile-pic.png" alt="profile-pic">
                     <div>
-                        <p>@morgan</p>
-                        <p>Super Cool Porject</p>
+                        <div>
+                            <h3>Less Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum obcaecati nemo sapiente blanditiis maxime et deleniti, libero cumque earum corporis explicabo. Asperiores enim minima obcaecati fugit!</p>
+                            <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img src="./icons/profile-pic.png" alt="profile-pic">
                     <div>
-                        <p>@morgan</p>
-                        <p>Super Cool Porject</p>
+                        <div>
+                            <h3>Impossible App</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero inventore doloremque ea expedita itaque!</p>
+                            <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img src="./icons/profile-pic.png" alt="profile-pic">
                     <div>
-                        <p>@morgan</p>
-                        <p>Super Cool Porject</p>
+                        <div>
+                            <h3>Easy Peasy App</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo non, debitis veniam dolorem eos dolore quibusdam excepturi eum in cumque molestias eius!</p>
+                            <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h3>Ad Blocker</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis dignissimos iusto quod excepturi voluptate quas culpa aliquid.</p>
+                            <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h3>Money Maker</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum qui consectetur, recusandae, dolorum neque atque nostrum facilis, veniam blanditiis maiores cupiditate perferendis.</p>
+                            <img src="./icons/favorite.svg" alt="favorite"><img src="./icons/eye-plus.svg" alt="eye-plus"><img src="./icons/source-fork.svg" alt="source-fork">
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="announcements">
+                <h2 class="announcements">Announcements</h2>
+                <div class="announcement-cards">
+                    <div>
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam itaque temporibus rem tempora molestias.</p>
+                    </div>
+                    <div>
+                        <h4>Community Share Day</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa explicabo cumque alias quisquam quod adipisci?</p>
+                    </div>
+                    <div>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque iure numquam enim hic sit. Voluptas, autem?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending">
+                <h2 class="trending">Trending</h2>
+                <div>
+                    <div>
+                        <img src="./icons/profile-pic.png" alt="profile-pic">
+                        <div>
+                            <p>@morgan</p>
+                            <p>Super Cool Porject</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./icons/profile-pic.png" alt="profile-pic">
+                        <div>
+                            <p>@morgan</p>
+                            <p>Super Cool Porject</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./icons/profile-pic.png" alt="profile-pic">
+                        <div>
+                            <p>@morgan</p>
+                            <p>Super Cool Porject</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./icons/profile-pic.png" alt="profile-pic">
+                        <div>
+                            <p>@morgan</p>
+                            <p>Super Cool Porject</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 </html>
